[package]

name = "stomp"
version = "0.11.0"
authors = [ "zslayton <zack.slayton@gmail.com" ]
repository = "https://github.com/zslayton/stomp-rs"
readme = "README.md"
description = "A full STOMP 1.2 client implementation. Allows programs to interact with message queueing services like ActiveMQ and RabbitMQ."
keywords = [ "stomp", "mq", "activemq", "rabbitmq", "queue" ]
license = "MIT"

[lib]
name = "stomp"

[dependencies]
"lifeguard" = "0.5"
"unicode-segmentation" = "0.1"
"log" = "0.3"
"mio" = "0.5"

[dependencies.mai]
path = "/home/zslayton/mai/"
